commit on test-BY

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -41,7 +41,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
       <a href="http://example.org/" class="navbar-brand">
-          <img src="http://example.org/images/site-navigation/logo.png" alt="site-logo">
+          <img src="http://example.org/images/site-navigation/logo.svg" alt="site-logo">
       </a>
       <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navbarCollapse">
           <span class="navbar-toggler-icon"></span>
@@ -307,7 +307,7 @@
       <div class="row contact__widget">
           <div class="col-lg-4">
               <div class="contact__widget_logo">
-                  <img src="http://example.org/images/contact/widget-logo.png" alt="widget-logo">
+                  <img src="http://example.org/images/contact/widget-logo.svg" alt="widget-logo">
               </div>
           </div>
           <div class="col-lg-4">
