commit on test-BY

--- a/public/portfolio/recipe-app-ux-study/index.html
+++ b/public/portfolio/recipe-app-ux-study/index.html
@@ -83,7 +83,7 @@
               
           </ul>
           <div class="navbar-nav">
-              <a href="http://example.org/contact" class="hire_button">Hire Me Now</a>
+              <a href="http://example.org/contact" class="hire_button">App Download</a>
           </div>
       </div>
   </div>
@@ -262,7 +262,7 @@
       <div class="row contact__widget">
           <div class="col-lg-4">
               <div class="contact__widget_logo">
-                  <img src="http://example.org/images/contact/widget-logo.svg" alt="widget-logo">
+                  <img src="http://example.org/images/contact/logo-white.svg" alt="logo-white">
               </div>
           </div>
           <div class="col-lg-4">
